package ca.mcmaster.se2aa4.island.team120;

public interface SearchIsland {
    String search(String currentDirection, int batteryLevel, int startingBatteryLevel, boolean checkDone);
    
}
